--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "@types/react-router-dom": "^5.1.5",
+    "react-router-dom": "^5.2.0",
+    "timecatjs": "^1.2.0-alpha.10"
   },
   "scripts": {
     "start": "react-scripts start",
